{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 455,
  "lineage": "7d149c92-a8bf-ac48-2e10-b8fbd13e0f5a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ab4d1e9cf9a1215a",
            "arn": "arn:aws:ec2:us-east-1:050264659180:instance/i-06a817d9f5fff5053",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06a817d9f5fff5053",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kev-tf-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00b6c15fa0fee8a4a",
            "private_dns": "ip-10-1-1-97.ec2.internal",
            "private_ip": "10.1.1.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b251958780d7c2c8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04bd3554305b535c5",
            "tags": {
              "Name": "Instance-1"
            },
            "tags_all": {
              "Name": "Instance-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d6ddc4d5ab07ac9e"
            ]
          },
          "dependencies": [
            "aws_subnet.private1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ab4d1e9cf9a1215a",
            "arn": "arn:aws:ec2:us-east-1:050264659180:instance/i-065d079496c132781",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-065d079496c132781",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kev-tf-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bfc7e42bd2c4cec0",
            "private_dns": "ip-10-1-2-239.ec2.internal",
            "private_ip": "10.1.2.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bd4ac0740fcbaa86",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0949521a61412aba7",
            "tags": {
              "Name": "Instance-2"
            },
            "tags_all": {
              "Name": "Instance-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d6ddc4d5ab07ac9e"
            ]
          },
          "dependencies": [
            "aws_subnet.private2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:050264659180:instance/i-032833d158e995934",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-032833d158e995934",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kev-tf-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0289595e49de392ea",
            "private_dns": "ip-10-1-6-137.ec2.internal",
            "private_ip": "10.1.6.137",
            "public_ip": "54.80.125.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-018a05b0f721388cd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c087aaee0c2d83db",
            "tags": {
              "Name": "VPN"
            },
            "tags_all": {
              "Name": "VPN"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0029e722ff6ced7b3"
            ]
          },
          "dependencies": [
            "aws_security_group.ServicesSG",
            "aws_subnet.publice3",
            "aws_vpc.kev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050264659180:internet-gateway/igw-0dbf2df9b1ed7e8f6",
            "id": "igw-0dbf2df9b1ed7e8f6",
            "owner_id": "050264659180",
            "tags": {
              "Name": "kev-internet-gw"
            },
            "tags_all": {
              "Name": "kev-internet-gw"
            },
            "vpc_id": "vpc-0642a30f18836a4c0"
          },
          "dependencies": [
            "aws_vpc.kev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private-tb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050264659180:route-table/rtb-08341838eed9cfc1a",
            "id": "rtb-08341838eed9cfc1a",
            "owner_id": "050264659180",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "vpc_id": "vpc-0642a30f18836a4c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050264659180:route-table/rtb-0d4fa3226e28148e6",
            "id": "rtb-0d4fa3226e28148e6",
            "owner_id": "050264659180",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dbf2df9b1ed7e8f6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "vpc_id": "vpc-0642a30f18836a4c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.kev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007ae44ac1fe924c3",
            "route_table_id": "rtb-08341838eed9cfc1a",
            "subnet_id": "subnet-04bd3554305b535c5"
          },
          "dependencies": [
            "aws_vpc.kev-vpc",
            "aws_route_table.Private-tb",
            "aws_subnet.private1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff5f95b23701c5ab",
            "route_table_id": "rtb-08341838eed9cfc1a",
            "subnet_id": "subnet-0949521a61412aba7"
          },
          "dependencies": [
            "aws_subnet.private2",
            "aws_vpc.kev-vpc",
            "aws_route_table.Private-tb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-private-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06abe8c0d96f5e4da",
            "route_table_id": "rtb-08341838eed9cfc1a",
            "subnet_id": "subnet-0aaad78b533b1fa49"
          },
          "dependencies": [
            "aws_route_table.Private-tb",
            "aws_subnet.private3",
            "aws_vpc.kev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0913df2ea83430867",
            "route_table_id": "rtb-0d4fa3226e28148e6",
            "subnet_id": "subnet-0fe39904ddaecf9d9"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.Public",
            "aws_subnet.public1",
            "aws_vpc.kev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026489333257128ac",
            "route_table_id": "rtb-0d4fa3226e28148e6",
            "subnet_id": "subnet-04afac1d72f5237e5"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.Public",
            "aws_subnet.public2",
            "aws_vpc.kev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074e1587fa8161312",
            "route_table_id": "rtb-0d4fa3226e28148e6",
            "subnet_id": "subnet-0c087aaee0c2d83db"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.Public",
            "aws_subnet.publice3",
            "aws_vpc.kev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ServicesSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050264659180:security-group/sg-0029e722ff6ced7b3",
            "description": "Allowing SSH and ports for the VPN",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0029e722ff6ced7b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1194,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 1194
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 943,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 943
              }
            ],
            "name": "ServiceSG",
            "name_prefix": "",
            "owner_id": "050264659180",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TF-SG"
            },
            "tags_all": {
              "Name": "TF-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0642a30f18836a4c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050264659180:subnet/subnet-04bd3554305b535c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-04bd3554305b535c5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050264659180",
            "tags": {
              "Name": "1-privates"
            },
            "tags_all": {
              "Name": "1-privates"
            },
            "vpc_id": "vpc-0642a30f18836a4c0"
          },
          "dependencies": [
            "aws_vpc.kev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050264659180:subnet/subnet-0949521a61412aba7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0949521a61412aba7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050264659180",
            "tags": {
              "Name": "2-privates"
            },
            "tags_all": {
              "Name": "2-privates"
            },
            "vpc_id": "vpc-0642a30f18836a4c0"
          },
          "dependencies": [
            "aws_vpc.kev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050264659180:subnet/subnet-0aaad78b533b1fa49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-0aaad78b533b1fa49",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050264659180",
            "tags": {
              "Name": "3-privates"
            },
            "tags_all": {
              "Name": "3-privates"
            },
            "vpc_id": "vpc-0642a30f18836a4c0"
          },
          "dependencies": [
            "aws_vpc.kev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050264659180:subnet/subnet-0fe39904ddaecf9d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.4.0/24",
            "id": "subnet-0fe39904ddaecf9d9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "050264659180",
            "tags": {
              "Name": "1-publics"
            },
            "tags_all": {
              "Name": "1-publics"
            },
            "vpc_id": "vpc-0642a30f18836a4c0"
          },
          "dependencies": [
            "aws_vpc.kev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050264659180:subnet/subnet-04afac1d72f5237e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.5.0/24",
            "id": "subnet-04afac1d72f5237e5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "050264659180",
            "tags": {
              "Name": "2-publics"
            },
            "tags_all": {
              "Name": "2-publics"
            },
            "vpc_id": "vpc-0642a30f18836a4c0"
          },
          "dependencies": [
            "aws_vpc.kev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publice3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050264659180:subnet/subnet-0c087aaee0c2d83db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.6.0/24",
            "id": "subnet-0c087aaee0c2d83db",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "050264659180",
            "tags": {
              "Name": "3-publics"
            },
            "tags_all": {
              "Name": "3-publics"
            },
            "vpc_id": "vpc-0642a30f18836a4c0"
          },
          "dependencies": [
            "aws_vpc.kev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:050264659180:vpc/vpc-0642a30f18836a4c0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-09781124fc7e81268",
            "default_route_table_id": "rtb-09c4e6ac2cdff3b06",
            "default_security_group_id": "sg-0d6ddc4d5ab07ac9e",
            "dhcp_options_id": "dopt-49411733",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0642a30f18836a4c0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09c4e6ac2cdff3b06",
            "owner_id": "050264659180",
            "tags": {
              "Name": "kev-vpc-tf"
            },
            "tags_all": {
              "Name": "kev-vpc-tf"
            }
          }
        }
      ]
    }
  ]
}